Updated affiliation in 2025-010

--- a/_articles/RJ-2025-010/RJ-2025-010.Rmd
+++ b/_articles/RJ-2025-010/RJ-2025-010.Rmd
@@ -30,19 +30,20 @@ author:
   - |
     [avi.kenny@duke.edu](avi.kenny@duke.edu){.uri}
 - name: Charles J. Wolock
-  affiliation: Department of Biostatistics, Epidemiology and Informatics
+  affiliation: Department of Biostatistics and Computational Biology, University of
+    Rochester
   orcid: 0000-0003-3527-1102
   address:
-  - University of Pennsylvania
-  - 423 Guardian Drive
-  - Philadelphia, PA 19104, USA
+  - University of Rochester
+  - 265 Crittenden Boulevard, CU 420630
+  - Rochester, New York 14642-0630
   - |
-    [cwolock@upenn.edu](cwolock@upenn.edu){.uri}
-date: '2025-08-07'
+    [c.wolock@rochester.edu](c.wolock@rochester.edu){.uri}
+date: '2025-08-12'
 date_received: '2025-02-06'
 journal:
   firstpage: 200
-  lastpage: 220
+  lastpage: 221
 volume: 17
 issue: 1
 slug: RJ-2025-010
