--- a/articles/RJ-2025-010/article.tex
+++ b/articles/RJ-2025-010/article.tex
@@ -821,11 +821,11 @@ The results in this paper were obtained using R~4.3.2 with the \CRANpkg{SimEngin
   \email{avi.kenny@duke.edu}}
 
 \address{Charles J. Wolock\\
-  Department of Biostatistics, Epidemiology and Informatics\\
-  University of Pennsylvania\\
-  423 Guardian Drive\\
-  Philadelphia, PA 19104, USA\\
+  Department of Biostatistics and Computational Biology\\
+  University of Rochester\\
+  265 Crittenden Boulevard,\\
+  Rochester, New York 14642, USA\\
   ORCiD: 0000-0003-3527-1102\\
-  \email{cwolock@upenn.edu}}
+  \email{c.wolock@rochester.edu}}
 
 % \newpage
