Author fixes to 2025-008, and recompiling issue 2025-1

--- a/_articles/RJ-2025-008/RJ-2025-008.Rmd
+++ b/_articles/RJ-2025-008/RJ-2025-008.Rmd
@@ -35,11 +35,11 @@ author:
   - University of Illinois at Chicago
   - |
     E-mail: [jyang06@uic.edu](jyang06@uic.edu){.uri}
-date: '2025-08-07'
+date: '2025-08-18'
 date_received: '2025-01-22'
 journal:
   firstpage: 160
-  lastpage: 179
+  lastpage: 180
 volume: 17
 issue: 1
 slug: RJ-2025-008
@@ -408,7 +408,7 @@ $$\mathbf C^\top \log(\mathbf L \boldsymbol \pi_i) = \mathbf X_i \boldsymbol \th
 where
 $$\mathbf C^\top = \begin{pmatrix}
 \mathbf I_{J-1} & -\mathbf I_{J-1} & \mathbf 0^\top_{J-1} \\
-\mathbf 0^\top_{J-1} & \mathbf 0^\top_{J-1} & 1 \\
+\mathbf 0^\top_{J-1} & \mathbf 0_{J-1} & 1 \\
 \end{pmatrix}$$
 is a $J \times (2J-1)$ constant matrix, $\mathbf L$ is a
 $(2J-1)\times J$ constant matrix with different formats among the four
@@ -556,7 +556,7 @@ $$\label{eq:triallogisticmodel}
 {\rm logit} \{P(Y_{ij}=1 \mid x_{gender\_i}, x_{age\_1i}, x_{age\_2i})\} = \beta_0 + \beta_1 x_{gender\_i} + \beta_{21} x_{age\_1i} + \beta_{22} x_{age\_2i}   (\#eq:triallogisticmodel)$$
 with $(\beta_0, \beta_1, \beta_{21}, \beta_{22}) = (0,3,3,3)$, where
 $i=1, \ldots, 6$ stands for the $i$th covariate combination, and
-$j = 1, \ldots, n_i$ is an index of patients who fall into the $i$th
+$j = 1, \ldots, N_i$ is an index of patients who fall into the $i$th
 covariate combination or sampling subgroups.
 Figure [4](#fig:trial_data){reference-type="ref"
 reference="fig:trial_data"} illustrates the distribution of treatment
@@ -754,8 +754,7 @@ and reduce the risk of overfitting.
 
 Alternatively, one may aim for EW D-optimal allocations when partial
 coefficient information is available with the ${\mathbf W}$ matrix
-substituted by the expectation (EW stands for the expectation of the
-${\mathbf W}$ matrix). To calculate these expectations, one may define
+substituted by the expectation (EW stands for the expected weight). To calculate these expectations, one may define
 prior distributions for the parameters based on available information.
 For instance, in this scenario, we assume the following independent
 prior distributions: $\beta_0\sim$ uniform$(-2,2)$, $\beta_1\sim$
@@ -835,7 +834,7 @@ the constrained uniform allocation with the `trial_data` example and
 allocation.
 
 ``` r
-> bounded_uniform(Ni=c(50, 40, 10, 200, 150, 50), nsample=200)
+> bounded_uniform(Ni=c(50, 40, 10, 200, 150, 50), nsample=200, label=label)
 
 Optimal Sampling Results:
 ================================================================================
@@ -947,7 +946,7 @@ two covariates categories: `dose` levels and `severity` grades. We aim
 to enroll $n=600$ patients from the $802$ available patients. The
 collection of feasible allocations is inherently constrained by the
 number of patients in different severity grades, defined as
-$$S={(w_1, \ldots, w_8)^\top \in S_0 \mid n(w_1+w_2+w_3+w_4) \leq 392, \qquad n(w_5+w_6+w_7+w_8) \leq 410}.$$
+$$S=\{(w_1, \ldots, w_8)^\top \in S_0 \mid n(w_1+w_2+w_3+w_4) \leq 392, ~~ n(w_5+w_6+w_7+w_8) \leq 410\}.$$
 The constraints specify that in the sample, the number of patients with
 mild symptoms must not exceed $392$ across all dose levels, while those
 with moderate/severe symptoms must not exceed $410$.
