--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -16,7 +16,7 @@ Articles for the R Journal should be no more than 20 pages, on topics of interes
 
 # Creating your article
 
-We currently accept submissions in Rmarkdown or LaTeX. Rmarkdown using the [rjtools package](https://rjournal.github.io/rjtools/) is preferred.
+We currently accept submissions in Rmarkdown or LaTeX. Rmarkdown using the [rjtools package](https://rjournal.github.io/rjtools/) is preferred. ***From January 2026, only Rmarkdown articles will be accepted***.
 
 ### Rmarkdown using rjtools
 
@@ -40,7 +40,7 @@ The `rticles::rjournal_article` output format has been deprecated in favour of `
 
 We strongly encourage you to use Rmarkdown with the `rjtools` package. It makes the submission more reproducible, and makes it easier to render your article in both HTML and PDF formats.
 
-However, we still accept articles written in LaTeX, although they may be processed more slowly.
+However, we still accept articles written in LaTeX, although they may be processed more slowly. From January 2026, LaTeX submissions will no longer be accepted.
 
 If you do use LaTeX, you must use the [LaTeX template](https://github.com/rjournal/share/raw/refs/heads/master/RJtemplate.zip). Instructions on using this template are provided in the [LaTeX author guide](https://github.com/rjournal/share/raw/refs/heads/master/author-guide.pdf). LaTeX submissions that do not follow these guidelines will be rejected without review.
 
