Added Selçuk Korkmaz as AE

--- a/editors.Rmd
+++ b/editors.Rmd
@@ -39,6 +39,7 @@ d-article > * {
 - [Jouni Helske](https://jounihelske.netlify.app), University of Turku, Finland
 - [Michael Kane](https://campuspress.yale.edu/fdstest/michael-j-kane/), Yale University, USA
 - [Yanfei Kang](https://yanfei.site), Beihang University, China
+- [Selçuk Korkmaz](https://selcukorkmaz.github.io/), Trakya University, Turkey
 - [Alexander Kowarik](https://www.linkedin.com/in/alexander-kowarik-37004ab/), Statistics Austria, Austria
 - [Ursula Laa](https://uschilaa.github.io), BOKU Vienna, Austria
 - [Robin Lovelace](https://www.robinlovelace.net), University of Leeds, UK
