--- a/_articles/RJ-2025-009/RJ-2025-009.Rmd
+++ b/_articles/RJ-2025-009/RJ-2025-009.Rmd
@@ -38,9 +38,7 @@ type: package
 header-includes: \usepackage{amsmath} \usepackage{amssymb} \usepackage[ruled,noline]{algorithm2e}
   \usepackage{amsfonts} \usepackage{xcolor} \usepackage{tikz}
 output:
-  rjtools::rjournal_pdf_article:
-    toc: no
-  rjtools::rjournal_web_article:
+  rjtools::rjournal_article:
     self_contained: yes
     toc: no
 bibliography: bg.bib
