--- a/_articles/RJ-2025-002/RJ-2025-002.Rmd
+++ b/_articles/RJ-2025-002/RJ-2025-002.Rmd
@@ -23,9 +23,7 @@ author:
   orcid: 0000-0002-0981-3943
 type: package
 output:
-  rjtools::rjournal_pdf_article:
-    toc: no
-  rjtools::rjournal_web_article:
+  rjtools::rjournal_article:
     self_contained: yes
     toc: no
 bibliography: RJreferences.bib
