Fix RJ-2025-001 tables

--- a/_articles/RJ-2025-001/RJ-2025-001.Rmd
+++ b/_articles/RJ-2025-001/RJ-2025-001.Rmd
@@ -86,7 +86,6 @@ draft: no
 ---
 
 
-:::::::::: article
 ## Introduction
 
 Valid interpretation of typical-response or non-cognitive (personality,
@@ -499,49 +498,22 @@ in table 1 to the uncorrected (i.e observed) correlation matrix. To
 perform the illustration, we generated a random sample of $N=500$
 simulees from a population in which the complete solution in
 [Table 2](#tab2){reference-type="ref" reference="tab2"} holds. The results are
-in [Table 3](#tab3){reference-type="ref" reference="tab3"}.
+in Table \@ref(tab:tab3).
 
-
-```{r tab3, echo = FALSE, results='asis'}
-library(kableExtra)
-library(dplyr)
-
-# Create the table data structure using HTML entities
-toy_data <- data.frame(
-  `Siren` = c(
-    "$$\\boldsymbol{\\Lambda} = \\begin{bmatrix} 0.758 & 0.000 & 0.118 \\\\ -0.664 & 0.000 & 0.175 \\\\ 0.620 & 0.000 & 0.311 \\\\ -0.723 & 0.000 & 0.257 \\\\ 0.000 & 0.605 & 0.382 \\\\ 0.000 & -0.583 & 0.272 \\\\ 0.000 & 0.681 & 0.137 \\\\ 0.000 & -0.582 & 0.165 \\end{bmatrix}$$",
-    "$$\\boldsymbol{\\Phi} = \\begin{bmatrix} 1 & .33 & 0 \\\\ .33 & 1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix}$$",
-    "CFI = 1; GFI = .998",
-    "RMSEA = 0; SRMR = .024"
-  ),
-  `Direct` = c(
-    "$$\\boldsymbol{\\Lambda} = \\begin{bmatrix} 0.761 & 0.000 \\\\ -0.693 & 0.000 \\\\ 0.631 & 0.000 \\\\ -0.727 & 0.000 \\\\ 0.000 & 0.549 \\\\ 0.000 & -0.552 \\\\ 0.000 & 0.720 \\\\ 0.000 & -0.586 \\end{bmatrix}$$",
-    "$$\\boldsymbol{\\Phi} = \\begin{bmatrix} 1 & .35 \\\\ .35 & 1 \\end{bmatrix}$$",
-    "CFI = .922; GFI = .974",
-    "RMSEA = .088; SRMR = .049"
-  ),
-  stringsAsFactors = FALSE
-)
-
-# Create the table with proper R Markdown integration
-tab3 <- kable(toy_data,
-      align = "cc",
-      escape = FALSE,
-      caption = "Toy Example Results",
-      col.names = c("Siren", "Direct")) |>
-  kable_styling(full_width = FALSE, position = "center") |>
-  pack_rows("Loading Matrices", 1, 1, bold = TRUE) |>
-  pack_rows("Phi Matrices", 2, 2, bold = TRUE) |>
-  pack_rows("Goodness of Fit Indices", 3, 3, bold = TRUE) |>
-  footnote(general = "GOF=Goodness of Fit Indices")
-tab3 <- gsub("&amp;", "&", tab3)
-tab3
-```
+| Siren Loadings                                                                                                              | Direct Loadings                                        |
+|:------------------------------------------------------|:-------------------------------------------------------|
+| $\boldsymbol{\Lambda} = \begin{bmatrix} 0.758 & 0.000 & 0.118 \\ -0.664 & 0.000 & 0.175 \\ 0.620 & 0.000 & 0.311 \\ -0.723 & 0.000 & 0.257 \\ 0.000 & 0.605 & 0.382 \\ 0.000 & -0.583 & 0.272 \\ 0.000 & 0.681 & 0.137 \\ 0.000 & -0.582 & 0.165 \\ \end{bmatrix}$ | $\boldsymbol{\Lambda} = \begin{bmatrix} 0.761 & 0.000 \\ -0.693 & 0.000 \\ 0.631 & 0.000 \\ -0.727 & 0.000 \\ 0.000 & 0.549 \\ 0.000 & -0.552 \\ 0.000 & 0.720 \\ 0.000 & -0.586 \\ \end{bmatrix}$  |
+| **Siren Phi Matrix**                                                                                                        | **Direct Phi Matrix**                                  |
+| $\boldsymbol{\Phi} = \begin{bmatrix} 1 & .33 & 0 \\ .33 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}$                                | $\boldsymbol{\Phi} = \begin{bmatrix} 1 & .35 \\ .35 & 1 \end{bmatrix}$ |
+| **Siren GOF**                 | **Direct GOF**             |
+| CFI = 1 <br> GFI = .998 <br> RMSEA = 0 <br> SRMR = .024 | CFI = .922 <br> GFI = .974 <br> RMSEA = .088 <br> SRMR = .049 |
+| *Note: GOF = Goodness of Fit Indices*       |                                               |
+Table: (\#tab:tab3) Toy Example Results
 
 When an operating common factor is left unmodeled, both, biased
 structural estimates of the remaining parameters and deterioration of
 the GOF indicators are expected. So, in general terms, results in
-[Table 3](#tab3){reference-type="ref" reference="tab3"} are predictable.
+Table \@ref(tab:tab3) are predictable.
 @Ferrando:2010 and @DeMars:2014 can be summarized as
 follows. With regards to bias, SIREN does a good job, and recovers quite
 acceptably (given both the sample and model size) all the parameters in
@@ -754,16 +726,16 @@ considered in the study (CFI, GFI, RMSR and RMSEA).
 ### Results
 
 The results for the average bias were very stable in all conditions (see
-[Table 4](#tab4){reference-type="ref" reference="tab4"} and
-[Table 5](#tab5){reference-type="ref" reference="tab5"}). The loadings
+[Table 4](#tab:tab4){reference-type="ref" reference="tab4"} and
+[Table 5](#tab:tab5){reference-type="ref" reference="tab5"}). The loadings
 on content factors are recovered more accurately than the loadings on
 the ACQ factor. In the content factors, the bias is evenly distributed
 across both factors, and never exceeds .05 (continuous condition) or .04
 (ordinal condition) in absolute value. In contrast, the average bias in
 the ACQ factor is greater in the ordinal case.
 
-```{r tab4, echo = FALSE}
-library(kableExtra)
+```{r tab4, echo = FALSE, layout="l-page"}
+library(gt)
 library(dplyr)
 
 # Table 4: Average biases of the content factor loadings
@@ -793,29 +765,53 @@ content_data <- data.frame(
   stringsAsFactors = FALSE
 )
 
-# Add section indicators
 content_data$Section <- c(rep("Continuous", 9), rep("Ordinal", 9))
-
-# Reorder columns to put Section first
 content_data <- content_data[, c("Section", "Condition1", "Condition2", paste0("Item", 1:20))]
 
-kable(content_data[, -1], # Remove Section column for display
-      caption = "Average biases of the content factor loadings",
-      col.names = c("", "", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
-                    "11", "12", "13", "14", "15", "16", "17", "18", "19", "20"),
-      escape = FALSE) |>
-  kable_styling(bootstrap_options = c("striped", "condensed"),
-                full_width = TRUE,
-                font_size = 10) |>
-  add_header_above(c(" " = 2, "factor 1" = 10, "factor 2" = 10)) |>
-  pack_rows("Continuous", 1, 9, bold = TRUE) |>
-  pack_rows("Ordinal", 10, 18, bold = TRUE) |>
-  footnote(general = "Bal = Balanced; LU = Low Unbalanced; HU = High Unbalanced; EQ = equal; LH = Low Heterogeneity; HH = High Heterogeneity",
-           general_title = "Note: ") |>
-  landscape()
+# Build the gt table 
+content_data %>%
+  # Row groupings by Section
+  gt(groupname_col = "Section") %>%
+  # Rename columns to match your kable call
+  cols_label(
+    Condition1 = "",
+    Condition2 = "",
+    Item1 = "1", Item2 = "2", Item3 = "3", Item4 = "4", Item5 = "5",
+    Item6 = "6", Item7 = "7", Item8 = "8", Item9 = "9", Item10 = "10",
+    Item11 = "11", Item12 = "12", Item13 = "13", Item14 = "14", Item15 = "15",
+    Item16 = "16", Item17 = "17", Item18 = "18", Item19 = "19", Item20 = "20"
+  ) %>%
+  # Add spanning headers for factor 1 and 2  
+  tab_spanner(
+    label = "factor 1",
+    columns = Item1:Item10
+  ) %>%
+  tab_spanner(
+    label = "factor 2",
+    columns = Item11:Item20
+  ) %>%
+  # Add table title/caption
+  tab_caption(
+    caption = "Average biases of the content factor loadings"
+  ) %>%
+  # Add a note to the bottom
+  tab_footnote(
+    footnote = "Bal = Balanced; LU = Low Unbalanced; HU = High Unbalanced; EQ = equal; LH = Low Heterogeneity; HH = High Heterogeneity"
+  ) %>%
+  # Format numbers to 3 decimals (optional, for consistent appearance)
+  fmt_number(
+    columns = starts_with("Item"),
+    decimals = 3
+  ) %>%
+  # Appearance tweaks to resemble kableExtra table
+  tab_options(
+    table.font.size = 10,
+    row_group.as_column = FALSE,
+    table.width = pct(100)
+  )
 ```
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, layout="l-page"}
 # Table 5: Average biases of the ACQ factor loadings
 acq_data <- data.frame(
   Condition1 = c(rep("Bal", 3), rep("LU", 3), rep("HU", 3), rep("Bal", 3), rep("LU", 3), rep("HU", 3)),
@@ -845,31 +841,49 @@ acq_data <- data.frame(
 
 # Add section indicators
 acq_data$Section <- c(rep("Continuous", 9), rep("Ordinal", 9))
-
-# Reorder columns to put Section first
 acq_data <- acq_data[, c("Section", "Condition1", "Condition2", paste0("Item", 1:20))]
 
-kable(acq_data[, -1], # Remove Section column for display
-      caption = "Average biases of the ACQ factor loadings",
-      col.names = c("", "", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
-                    "11", "12", "13", "14", "15", "16", "17", "18", "19", "20"),
-      escape = FALSE) |>
-  kable_styling(bootstrap_options = c("striped", "condensed"),
-                full_width = TRUE,
-                font_size = 10) |>
-  add_header_above(c(" " = 2, "factor 1" = 10, "ACQ factor" = 10)) |>
-  pack_rows("Continuous", 1, 9, bold = TRUE) |>
-  pack_rows("Ordinal", 10, 18, bold = TRUE) |>
-  footnote(general = "Bal = Balanced; LU = Low Unbalanced; HU = High Unbalanced; EQ = equal; LH = Low Heterogeneity; HH = High Heterogeneity",
-           general_title = "Note: ") |>
-  landscape()
+acq_data %>%
+  gt(groupname_col = "Section") %>%
+  cols_label(
+    Condition1 = "",
+    Condition2 = "",
+    Item1 = "1",  Item2 = "2",  Item3 = "3",  Item4 = "4",  Item5 = "5",
+    Item6 = "6",  Item7 = "7",  Item8 = "8",  Item9 = "9",  Item10 = "10",
+    Item11 = "11", Item12 = "12", Item13 = "13", Item14 = "14", Item15 = "15",
+    Item16 = "16", Item17 = "17", Item18 = "18", Item19 = "19", Item20 = "20"
+  ) %>%
+  tab_spanner(
+    label = "factor 1",
+    columns = Item1:Item10
+  ) %>%
+  tab_spanner(
+    label = "ACQ factor",
+    columns = Item11:Item20
+  ) %>%
+  tab_caption(
+    caption = "Average biases of the ACQ factor loadings"
+  ) %>%
+  # Add a note to the bottom
+  tab_footnote(
+    footnote = "Bal = Balanced; LU = Low Unbalanced; HU = High Unbalanced; EQ = equal; LH = Low Heterogeneity; HH = High Heterogeneity"
+  ) %>%
+  fmt_number(
+    columns = Item1:Item20, decimals = 3
+  ) %>%
+  tab_options(
+    table.font.size = 10,
+    row_group.as_column = FALSE,
+    table.width = pct(100)
+  ) %>%
+  opt_row_striping()
 ```
 
 No significant changes are observed when imbalance increases. However, a
 slight increase in bias can be noticed in those conditions in which the
 ACQ pattern is more heterogeneous. This increase, however, does not
 substantially impact the average bias of the ACQ factor
-[Table 5](#tab5){reference-type="ref" reference="tab5"}. The bias in
+[Table 5](#tab:tab5){reference-type="ref" reference="tab5"}. The bias in
 ACQ remains at around .06, with a maximum of .077.
 
 With regards to the model-data fit ANOVA results, finally, no
@@ -1303,4 +1317,3 @@ Vigil-Colet, Andreu, David Navarro-Gonzalez, and Fabia Morales-Vives.
 Question." *Psicothema* 1 (32): 108--14.
 <https://doi.org/10.7334/psicothema2019.286>.
 :::
-::::::::::::::::::::::::::::::::::::
