Fix RJ-2025-010 abstract not plaintext

--- a/_articles/RJ-2025-010/RJ-2025-010.Rmd
+++ b/_articles/RJ-2025-010/RJ-2025-010.Rmd
@@ -1,20 +1,18 @@
 ---
 title: 'SimEngine: A Modular Framework for Statistical Simulations in R'
 abstract: |
-  This article describes
-  [**SimEngine**](https://CRAN.R-project.org/package=SimEngine), an
+  This article describes SimEngine, an
   open-source R package for structuring, maintaining, running, and
   debugging statistical simulations on both local and cluster-based
   computing environments. Several R packages exist for facilitating
-  simulations, but
-  [**SimEngine**](https://CRAN.R-project.org/package=SimEngine) is the
+  simulations, but SimEngine is the
   only package specifically designed for running simulations in parallel
   via job schedulers on high-performance cluster computing systems. The
   package provides structure and functionality for common simulation
   tasks, such as setting simulation levels, managing seeds for random
   number generation, and calculating summary metrics (such as bias and
   confidence interval coverage).
-  [**SimEngine**](https://CRAN.R-project.org/package=SimEngine) also
+  SimEngine also
   brings several unique features, such as automatic calculation of Monte
   Carlo error and information sharing across simulation replicates. We
   provide an overview of the package and demonstrate some of its
