Fix missing table in RJ-2025-004 html

--- a/_articles/RJ-2025-004/RJ-2025-004.Rmd
+++ b/_articles/RJ-2025-004/RJ-2025-004.Rmd
@@ -323,7 +323,7 @@ The proposed method is based on the calculation of piecewise geodesic paths. To 
 
 To evaluate the goodness-of-fit of the fitted curve, a distance-based loss function is needed. The `spherical_dist()` function calculates the geodesic distance between two input points. Based on this function, the `calculate_loss()` calculates the loss function based on the squared spherical distances between observed values and predicted values on the curve. Finally, the main function `penalized_linear_spherical_spline()` fits the penalized piecewise geodesic curve to the given data. In summary, the \CRANpkg{spheresmooth} package provides core functions for smoothing spherical data, along with several useful functions for handling spherical data.
 
-```{r, echo = FALSE}
+```{r pakcage-functions, echo = FALSE}
 library(knitr)
 library(kableExtra)
 
@@ -365,16 +365,20 @@ spheresmooth_functions <- data.frame(
 )
 
 # Create the table using knitr::kable with kableExtra formatting
-kable(spheresmooth_functions,
+tab <- kable(spheresmooth_functions,
       caption = "Summary of the functions in the spheresmooth package.",
       align = c("l", "l"),
       col.names = c("Function", "Description"),
-      format = "latex",
       booktabs = TRUE,
       longtable = FALSE,
-      escape = FALSE) |>
-  column_spec(1, monospace = TRUE) |>
-  column_spec(2, width = "7cm")
+      escape = FALSE)
+    
+if (knitr::is_latex_output()) {
+  tab <- tab |>
+    column_spec(1, monospace = TRUE) |>
+    column_spec(2, width = "7cm")
+}
+tab
 
 ```
 
