--- a/_articles/RJ-2025-004/RJ-2025-004.tex
+++ b/_articles/RJ-2025-004/RJ-2025-004.tex
@@ -304,7 +304,7 @@ To evaluate the goodness-of-fit of the fitted curve, a distance-based loss funct
 
 \begin{table}
 
-\caption{\label{tab:unnamed-chunk-2}Summary of the functions in the spheresmooth package.}
+\caption{\label{tab:pakcage-functions}Summary of the functions in the spheresmooth package.}
 \centering
 \begin{tabular}[t]{>{}l>{\raggedright\arraybackslash}p{7cm}}
 \toprule
