Fix RJ-2025-004 for pdf

--- a/_articles/RJ-2025-004/RJ-2025-004.Rmd
+++ b/_articles/RJ-2025-004/RJ-2025-004.Rmd
@@ -434,8 +434,6 @@ cartesian_to_spherical(spherical_to_cartesian(theta_phi))
 
 As illustrated in [Section 2](#prelim), we need to provide a sequence of knots and associated control points to define a piecewise geodesic curve. Although we introduce our methodology targeting data observed over time, it is important to note that the argument of a parametrized curve, denoted as $t$, does not necessarily imply physical time. This methodology can be applied to the smoothing problem of any directional data evolving over a continuous domain. The only requirements for computing a piecewise geodesic curve are the knots and their corresponding control points. The function that returns the coordinates of the curve at a given $t$ point is the `piecewise_geodesic()` function. Table \@ref(tab:piecewisegeodesic) summarizes the arguments of the function.
 
-<center>
-
 Table: (\#tab:piecewisegeodesic) Summary of the arguments of the `piecewise_geodesic()` function.
 
 | Argument      | Description                              |
@@ -443,11 +441,10 @@ Table: (\#tab:piecewisegeodesic) Summary of the arguments of the `piecewise_geod
 | t             | A numeric vector representing the time or location. |
 | control_points | A matrix of control points where each row represents a control point. |
 | knots         | A numeric vector of knot values. |
-</center>
 
 Here, the `control_points` is a matrix where each row represents a point in Cartesian coordinates that determines the geodesic segments. Since a pair of points defines a geodesic segment, this function can be used to compute the geodesic curve between two points if the `knots` is given as two endpoints. The `knots` is a vector of points separating the curve in the time domain. The `piecewise_geodesic()` function performs the following steps. First, it initializes an empty matrix to store the generated points on the curve. Second, it iterates over the separated geodesic segments to find the segment to which the `t` values belong. Then, it internally calls the `geodesic()` function for the corresponding segment to compute the coordinates of those points on the curve and appends the generated points to the initialized matrix. Finally, it returns the matrix containing all the points corresponding to the given `t` values.
 
-```{r piecewise, fig.show='hold', out.width="40%", fig.cap="Plot of (left) piecewise geodesic curve with the control points at (1, 0, 0), (1/$\\sqrt{2}$, 1/$\\sqrt{2}$, 0), (-1/$\\sqrt{3}$, 1/$\\sqrt{3}$, 1/$\\sqrt{3}$), and (0, 0, 1) and (right) piecewise geodesic curve with the control points at (1/$\\sqrt{3}$, 1/$\\sqrt{3}$, 1/$\\sqrt{3}$), (1/$\\sqrt{3}$, 1/$\\sqrt{3}$, -1/$\\sqrt{3}$, (-1/$\\sqrt{3}$, 1/$\\sqrt{3}$, 1/$\\sqrt{3}$), and (-1/$\\sqrt{3}$, 1/$\\sqrt{3}$, -1/$\\sqrt{3}$).", fig.subcap=c("",""), fig.align='center'}
+```{r piecewise, fig.show='hold', out.width="40%", fig.cap="Plot of (left) piecewise geodesic curve with the control points at (1, 0, 0), (1/$\\sqrt{2}$, 1/$\\sqrt{2}$, 0), (-1/$\\sqrt{3}$, 1/$\\sqrt{3}$, 1/$\\sqrt{3}$), and (0, 0, 1) and (right) piecewise geodesic curve with the control points at (1/$\\sqrt{3}$, 1/$\\sqrt{3}$, 1/$\\sqrt{3}$), (1/$\\sqrt{3}$, 1/$\\sqrt{3}$, -1/$\\sqrt{3}$), (-1/$\\sqrt{3}$, 1/$\\sqrt{3}$, 1/$\\sqrt{3}$), and (-1/$\\sqrt{3}$, 1/$\\sqrt{3}$, -1/$\\sqrt{3}$).", fig.subcap=c("",""), fig.align='center'}
 knitr::include_graphics("figures/piecewise_geo1.png")
 knitr::include_graphics("figures/piecewise_geo2.png")
 ```
@@ -500,8 +497,6 @@ After ensuring the flexibility of the model by setting the number of initial kno
 
 The `penalized_linear_spherical_spline()` function is designed to automatically perform all these steps when initial knots and initial control points are not specified, aiming to enhance convenience for researchers. If there are valid numbers of knots determined through exploratory data analysis and preliminary research, along with coordinates for initial control points, they can be used as arguments. Table \@ref(tab:penalized-linear-spherical-spline) summarizes the arguments of the function.
 
-<center>
-
 Table: (\#tab:penalized-linear-spherical-spline) Summary of the arguments of the `penalized_linear_spherical_spline()` function.
 
 | Argument      | Description                              |
@@ -517,7 +512,6 @@ Table: (\#tab:penalized-linear-spherical-spline) Summary of the arguments of the
 | epsilon_iter  | A numeric value specifying the convergence criterion for iterations. Default is 1e-05. |
 | jump_eps      | A numeric value specifying the threshold for pruning control points based on jump size. Default is 1e-02. |
 | verbose       | A logical value indicating whether to print progress information. Default is FALSE. |
-</center>
 
 The function returns a list containing the fitted result for each complexity parameter, the dimension and BIC values associated with the complexity parameters required for model selection. The BIC values are stored in the last element of the list. It is possible to directly examine the BIC values and their corresponding fitted curves. Unless there is a specific reason, it is recommended to consider the $\lambda$ that attains the minimum BIC value as the optimal complexity parameter and select the corresponding fitted curve as the final fitted model. The usage of the function and the model selection process are illustrated in [Section 5](#application).
 
