--- a/_articles/RJ-2025-004/RJ-2025-004.tex
+++ b/_articles/RJ-2025-004/RJ-2025-004.tex
@@ -462,7 +462,7 @@ Here, the \texttt{control\_points} is a matrix where each row represents a point
 
 }
 
-\caption{Plot of (left) piecewise geodesic curve with the control points at (1, 0, 0), (1/$\sqrt{2}$, 1/$\sqrt{2}$, 0), (-1/$\sqrt{3}$, 1/$\sqrt{3}$, 1/$\sqrt{3}$), and (0, 0, 1) and (right) piecewise geodesic curve with the control points at (1/$\sqrt{3}$, 1/$\sqrt{3}$, 1/$\sqrt{3}$), (1/$\sqrt{3}$, 1/$\sqrt{3}$, -1/$\sqrt{3}$, (-1/$\sqrt{3}$, 1/$\sqrt{3}$, 1/$\sqrt{3}$), and (-1/$\sqrt{3}$, 1/$\sqrt{3}$, -1/$\sqrt{3}$).}\label{fig:piecewise}
+\caption{Plot of (left) piecewise geodesic curve with the control points at (1, 0, 0), (1/$\sqrt{2}$, 1/$\sqrt{2}$, 0), (-1/$\sqrt{3}$, 1/$\sqrt{3}$, 1/$\sqrt{3}$), and (0, 0, 1) and (right) piecewise geodesic curve with the control points at (1/$\sqrt{3}$, 1/$\sqrt{3}$, 1/$\sqrt{3}$), (1/$\sqrt{3}$, 1/$\sqrt{3}$, -1/$\sqrt{3}$), (-1/$\sqrt{3}$, 1/$\sqrt{3}$, 1/$\sqrt{3}$), and (-1/$\sqrt{3}$, 1/$\sqrt{3}$, -1/$\sqrt{3}$).}\label{fig:piecewise}
 \end{figure}
 
 In the Figure \ref{fig:piecewise}, the left plot depicts a piecewise geodesic curve determined by the control points (\(1\), \(0\), \(0\)), (\(1/\sqrt{2}\), \(1/\sqrt{2}\), \(0\)), (\(-1/\sqrt{3}\), \(1/\sqrt{3}\), \(1/\sqrt{3}\)), and (\(0\), \(0\), \(1\)). The function \texttt{piecewise\_geodesic()} is used to compute the coordinates of the curve at given time points.
