--- a/_articles/RJ-2025-006/RJ-2025-006.tex
+++ b/_articles/RJ-2025-006/RJ-2025-006.tex
@@ -2,7 +2,7 @@
 \title{latrend: A Framework for Clustering Longitudinal Data}
 
 
-\author{by Niek Den Teuling, Steffen Pauws, and Edwin van den Heuvel}
+\author{by , Steffen Pauws, and Edwin van den Heuvel}
 
 \maketitle
 
@@ -450,7 +450,7 @@ summary(lmkm2)
 #> 
 #> Cluster sizes (K=2):
 #>           A           B 
-#> 166 (55.1%) 135 (44.9%) 
+#> 135 (44.9%) 166 (55.1%) 
 #> 
 #> Number of obs: 3913, strata (Patient): 301
 #> 
@@ -578,8 +578,8 @@ predict(lmkm3, newdata = data.frame(Week = c(1, 10), Cluster = "Decreasing"))
 
 \begin{verbatim}
 #>        Fit
-#> 1 4.249461
-#> 2 5.815110
+#> 1 2.919423
+#> 2 2.024865
 \end{verbatim}
 
 The \texttt{predictPostprob()} and \texttt{predictAssignments()} functions compute the posterior probability and cluster membership for new trajectories, respectively. As this is not a common use case for cluster methods, most of the underlying packages do not provide this functionality. For demonstration purposes, we have implemented the functionality for the \texttt{lcModelKML} class.
@@ -626,12 +626,12 @@ metric(kmlList, c("Dunn", "WMAE", "estimationTime"))
 
 \begin{verbatim}
 #>         Dunn      WMAE estimationTime
-#> 1         NA 1.4261264          0.472
-#> 2 0.10737225 0.7850566          0.696
-#> 3 0.09944419 0.6523208          0.968
-#> 4 0.11353357 0.6081128          1.176
-#> 5 0.13487175 0.5598639          1.311
-#> 6 0.13196444 0.5209264          1.746
+#> 1         NA 1.4261264          0.672
+#> 2 0.10737225 0.7850566          1.116
+#> 3 0.09944419 0.6523208          1.470
+#> 4 0.11353357 0.6081128          1.880
+#> 5 0.13487175 0.5598639          2.338
+#> 6 0.13196444 0.5209264          2.690
 \end{verbatim}
 
 As the preferred solution corresponds to the highest Dunn index, we can obtain the respective model by calling the \texttt{max()} function on the \texttt{lcModels} list object.
@@ -979,7 +979,7 @@ Overall, we intend the framework to bridge the different approaches to clusterin
 \section*{Computational details}\label{sec:technical}
 \addcontentsline{toc}{section}{Computational details}
 
-The examples and figures in this paper were obtained using R 4.5.1 \citep{rcoreteam2021r} with the packages \CRANpkg{latrend} 1.6.2, \CRANpkg{ggplot2} 3.5.2 \citep{Wickham2016ggplot2}, and \CRANpkg{data.table} 1.17.8 \citep{Dowle2020data.table}. The KmL method was estimated with the \CRANpkg{kml} 2.5.0 package. The distance-based method used the \CRANpkg{dtwclust} 6.0.0 package. The GBTM and GMM analyses were performed using the \CRANpkg{lcmm} 2.2.1 package, with the parallel computation achieved using the \CRANpkg{foreach} 1.5.2 package \citep{weston2022foreach}.
+The examples and figures in this paper were obtained using R 4.5.1 \citep{rcoreteam2021r} with the packages \CRANpkg{latrend} 1.6.2, \CRANpkg{ggplot2} 4.0.0.9000 \citep{Wickham2016ggplot2}, and \CRANpkg{data.table} 1.17.8 \citep{Dowle2020data.table}. The KmL method was estimated with the \CRANpkg{kml} 2.5.0 package. The distance-based method used the \CRANpkg{dtwclust} 6.0.0 package. The GBTM and GMM analyses were performed using the \CRANpkg{lcmm} 2.2.1 package, with the parallel computation achieved using the \CRANpkg{foreach} 1.5.2 package \citep{weston2022foreach}.
 
 R and all packages used within the article and the \CRANpkg{latrend} package are available from the Comprehensive R Archive Network (CRAN) at (\url{https://CRAN.R-project.org}).
 
@@ -991,7 +991,7 @@ This work was supported by Philips Research, Eindhoven, the Netherlands. Niek De
 \bibliography{latrend-article.bib}
 
 \address{%
-Niek Den Teuling\\
+\\
 Eindhoven University of Technology, and Philips Research\\%
 \\
 %
